# grelsolar

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  cliff.toml  justfile  release-plz.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  container.rs  lib.rs  main.rs  server.rs
src/core/: app.rs  config.rs  container.rs  mod.rs
src/home_assistant/: client.rs  error.rs  http_client.rs  mod.rs  schemas.rs
src/integration/: mod.rs
src/integration/homeassistant/: client.rs  http_client.rs  mod.rs  schemas.rs
src/integration/solarlog/: client.rs  http_client.rs
src/services/: mod.rs  solar.rs  solar_bridge.rs  solarbridge.rs
src/solarlog/: client.rs  error.rs  http_client.rs  mod.rs
tests/: integration_app.rs  integration_home_assistant.rs  integration_homeassistant.rs  integration_server.rs  integration_solar_bridge_service.rs  integration_solarbridge.rs  integration_solarlog.rs  mockserver_homeassistant.rs  mockserver_solarlog.rs
tests/resources/: daily_energy.json  httpmock.yaml
