[package]
name = "grust"
version = "0.0.0"
edition = "2024"

[dependencies]
async-lock = "3.4.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
env_logger = "0.11.8"
failsafe = "1.3.0"
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-retry = "0.3.0"

[dev-dependencies]
httpmock = "0.7.0"
