[package]
name = "grelsolar"
version = "0.1.1-pre.39+29a636e"
edition = "2024"
license = "MIT"
authors = ["Loïc Gremaud <loic.gremaud@grelinfo.ch>"]
description = "Sync solar data from Solar-Log to Home Assistant."
homepage = "https://github.com/grelinfo/grelsolar"
repository = "https://github.com/grelinfo/grelsolar"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
async-lock = "3.4.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
env_logger = "0.11.8"
failsafe = "1.3.0"
humantime = "2.2.0"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-retry = "0.3.0"

[dev-dependencies]
http = "1.3.1"
httpmock = "0.7.0"
rstest = "0.25.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[package.metadata.typos]
default.extend-ignore-re = [
    "SUCESS - You are now logged out.",
]
